--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,3 +13,17 @@ body {
   height: 100vh;
   width: 100vw;
 }
+
+.cluster-icon{
+  height: 3rem;
+  width: 3rem;
+  border-radius: 50%;
+  background-color: #2d84cb;
+  transform: translate(-25%,-25%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 900;
+  font-size: 1.5rem;
+  color: #fff;
+}
