feat: novos pins e rota de teste

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,7 +18,7 @@ body {
   height: 3rem;
   width: 3rem;
   border-radius: 50%;
-  background-color: #2d84cb;
+  background-color: #fb6c1d;
   transform: translate(-25%,-25%);
   display: flex;
   justify-content: center;
